# playground

adk/: .gitignore  flake.nix
adk/adk/: Cargo.toml  cbindgen.toml
adk/adk/adk-derive/: Cargo.toml
adk/adk/adk-derive/src/: lib.rs
adk/adk/python/: default.nix  pyproject.toml
adk/adk/src/: lib.rs  utils.rs
adk/adk/src/components/: dis.rs  entity.rs  lla.rs  mod.rs  scenario.rs  sensor.rs
adk/tests/c-app/: CMakeLists.txt  default.nix  main.c
adk/tests/py-app/: default.nix
c-lib/: default.nix  flake.nix  result
c-lib/clients/c-app/: CMakeLists.txt  default.nix  main.c
c-lib/clients/go-app/: default.nix  goApp.go
c-lib/clients/py-app/: default.nix  pyproject.toml
c-lib/clients/python/: default.nix
c-lib/hellow/: Cargo.toml  build.rs  result
c-lib/hellow/include/: hellow.h  hellow.hxx
c-lib/hellow/src/: lib.rs  rs.rs  utils.rs
c-lib/python/: default.nix  pyproject.toml
cortex/: .gitignore
cortex-rs/: requirements.txt  shell.nix
cortex-rs/cortex/: pyproject.toml
cortex-rs/cortex/src/: lib.rs
cortex/cortex/: Cargo.toml
cortex/src/: blackboard.py
python/: default.nix  partition.py  zones.py
rust/: Cargo.toml  default.nix
rust/ardutils/: Cargo.toml
rust/ardutils/src/: connection.rs  lib.rs  mode.rs
rust/ardutils/src/command/: macros.rs  mod.rs  test.rs
rust/ardutils/src/mission/: upload.rs
rust/ardutils/src/telemetry/: mod.rs
rust/interviews/: Cargo.toml
rust/interviews/src/: cut_edge.rs  lib.rs
tickrs/: Cargo.toml
tickrs/src/: lib.rs  main.rs
tickrs/src/tickrslib/: mod.rs  ticker.rs
(+10 files in other folders)
